# Phosp

./: .gitignore  README.md  pyproject.toml  record
.github/workflows/: ci.yml
benchmarks/ascl1_pS93_pT233/: prepare.sh  run_ascl1_gpu.sh
benchmarks/phgdh_pT78/: config.yaml
benchmarks/phgdh_pT78_200ns/: compare.py  relaunch_wt_reference.sh  run_phgdh_gpu_200ns.sh
benchmarks/phgdh_pT78_gpu_rerun/: run_phgdh_gpu.sh
docs/: installation.md  tutorial.md
examples/multisite_pSer/: run.yaml
examples/ncaa_homoallylglycine/: README.md  run.yaml
examples/ubiquitin_pThr/: run.yaml
examples/uniprot_input/: run.yaml
phosp/: cli.py  config.py  exceptions.py  logging.py  pipeline.py  ui.py
phosp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phosp/engines/: base.py  gromacs.py
phosp/forcefields/: amber_ff14sb.py  base.py  charmm36m.py  discovery.py
phosp/modification/: acetyl.py  base.py  methyl.py  ncaa.py  ncaa_bundle.py  phospho.py  pser.py  pthr.py  ptyr.py
phosp/prediction/: netphos.py
phosp/protocols/: globular_protein.yaml  globular_protein_100ns_eq.yaml  globular_protein_research.yaml  membrane_protein.yaml  phosphopeptide.yaml  (+1 more)
tests/: make_fixture_traj.py  test_checkpoint.py  test_cli.py  test_config.py  test_forcefields.py  test_gromacs_engine.py  test_hpc_runners.py  test_integration.py  test_logging.py  test_modification.py  test_ncaa.py  test_netphos.py  test_pipeline.py  test_protocols.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_structure.py  test_structure_utils.py  test_ui.py
(+73 files in other folders)
