[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phosp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mdanalysis>=2.6",
    "biopython>=1.81",
    "pydantic>=2.0",
    "typer>=0.9",
    "jinja2>=3.1",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "freesasa>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]

[project.scripts]
phosp = "phosp.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
